--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -9,3 +9,7 @@
     margin: 0 auto;
     width: 50%;
 }
+
+.btn {
+    background-color: #24577C;
+}
